--- a/index.html
+++ b/index.html
@@ -3,18 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>ELYONARIS TEST V1.0 - Secure Exam Platform</title>
+  <title>ELYONTESTED V1.0 - Secure Exam Platform</title>
   <meta name="description" content="Secure exam platform for students with Google Forms integration, anti-cheating measures, and real-time monitoring" />
   <meta name="author" content="ELYONARIS TEST V1.0" />
 
   <meta property="og:title" content="ELYONARIS TEST V1.0 - Secure Exam Platform" />
   <meta property="og:description" content="Take exams securely with built-in monitoring and anti-cheating protection" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-<link rel="icon" type="image/png" href="/src/assets/logo.png">
+    <meta property="og:image" content="./src/assets/A.png" />
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@Lovable" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:site" content="@ELYONTESTED" />
+    <meta name="twitter:image" content="./src/assets/A.png" />
+<link rel="icon" type="image/png" href="/src/assets/logo.png">
   </head>
 
   <body>
