--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>ELYONTESTED V1.0 - Secure Exam Platform</title>
   <meta name="description" content="Secure exam platform for students with Google Forms integration, anti-cheating measures, and real-time monitoring" />
-  <meta name="author" content="ELYONARIS TEST V1.0" />
+  <meta name="author" content="ELYONTESTED V1.0" />
 
-  <meta property="og:title" content="ELYONARIS TEST V1.0 - Secure Exam Platform" />
-  <meta property="og:description" content="Take exams securely with built-in monitoring and anti-cheating protection" />
+  <meta property="og:title" content="ELYONTESTED V1.0 - Secure Exam Platform" />
+  <meta property="og:description" content="Secure exam platform for students with Google Forms integration, anti-cheating measures, and real-time monitoring" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="./src/assets/A.png" />
     <meta name="twitter:card" content="summary_large_image" />
