--- a/index.html
+++ b/index.html
@@ -3,22 +3,28 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>ELYONTESTED V1.0 - Secure Exam Platform</title>
-  <meta name="description" content="Secure exam platform for students with Google Forms integration, anti-cheating measures, and real-time monitoring" />
-  <meta name="author" content="ELYONTESTED V1.0" />
+    <title>ELYONTESTED V1.0 - Secure Exam Platform</title>
+    <meta name="description" content="Secure exam platform for students with Google Forms integration, anti-cheating measures, and real-time monitoring" />
+    <meta name="author" content="ELYONTESTED V1.0" />
 
-  <meta property="og:title" content="ELYONTESTED V1.0 - Secure Exam Platform" />
-  <meta property="og:description" content="Secure exam platform for students with Google Forms integration, anti-cheating measures, and real-time monitoring" />
+    <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="./src/assets/A.png" />
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@ELYONTESTED" />
-    <meta name="twitter:image" content="./src/assets/A.png" />
-<link rel="icon" type="image/png" href="/src/assets/logo.png">
-  </head>
+    <meta property="og:url" content="https://elyonsat.vercel.app/" />
+    <meta property="og:title" content="ELYONTESTED- Secure Exam Platform" />
+    <meta property="og:description" content="Secure exam platform for students with Google Forms integration, anti-cheating measures, and real-time monitoring" />
+    <meta property="og:image" content="https://elyonsat.vercel.app/A.png" />
 
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://elyonsat.vercel.app/" />
+    <meta property="twitter:title" content="ELYONTESTED- Secure Exam Platform" />
+    <meta property="twitter:description" content="Secure exam platform for students with Google Forms integration, anti-cheating measures, and real-time monitoring" />
+    <meta property="twitter:image" content="https://elyonsat.vercel.app/A.png" />
+
+    <link rel="icon" type="image/png" href="/src/assets/logo.png">
+  </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="./src/main.tsx"></script>
+    <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
