--- a/index.html
+++ b/index.html
@@ -7,19 +7,12 @@
     <meta name="description" content="Secure exam platform for students with Google Forms integration, anti-cheating measures, and real-time monitoring" />
     <meta name="author" content="ELYONTESTED V1.0" />
 
-    <!-- Open Graph / Facebook -->
+    <!-- Open Graph (used by Telegram and other platforms) -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://elyonsat.vercel.app/" />
-    <meta property="og:title" content="ELYONTESTED- Secure Exam Platform" />
+    <meta property="og:title" content="ELYONTESTED - Secure Exam Platform" />
     <meta property="og:description" content="Secure exam platform for students with Google Forms integration, anti-cheating measures, and real-time monitoring" />
     <meta property="og:image" content="https://elyonsat.vercel.app/A.png" />
-
-    <!-- Twitter -->
-    <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://elyonsat.vercel.app/" />
-    <meta property="twitter:title" content="ELYONTESTED- Secure Exam Platform" />
-    <meta property="twitter:description" content="Secure exam platform for students with Google Forms integration, anti-cheating measures, and real-time monitoring" />
-    <meta property="twitter:image" content="https://elyonsat.vercel.app/A.png" />
 
     <link rel="icon" type="image/png" href="/src/assets/logo.png">
   </head>
