--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- Open Graph (used by Telegram and other platforms) -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://elyonsat.vercel.app/" />
-    <meta property="og:title" content="ELYONTESTED - Secure Exam Platform" />
+    <meta property="og:title" content="ELYONTESTED V1.0 - Secure Exam Platform" />
     <meta property="og:description" content="Secure exam platform for students with Google Forms integration, anti-cheating measures, and real-time monitoring" />
     <meta property="og:image" content="https://elyonsat.vercel.app/A.png?v=3" />
 
