--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta property="og:url" content="https://elyonsat.vercel.app/" />
     <meta property="og:title" content="ELYONTESTED V1.0 - Secure Exam Platform" />
     <meta property="og:description" content="Secure exam platform for students with Google Forms integration, anti-cheating measures, and real-time monitoring" />
-    <meta property="og:image" content="https://elyonsat.vercel.app/A.png?v=3" />
+    <meta property="og:image" content="https://elyonsat.vercel.app/elyon-preview.png?cache=123456" />
 
     <link rel="icon" type="image/png" href="/src/assets/logo.png">
   </head>
